force-app/main/default/objects/Loan_Fees__c/Loan_Fees__c.object-meta.xml
<CustomObject>
    <label>Loan Fees</label>
    <nameField>
        <label>Loan Fees</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>