force-app/main/default/objects/Loan_Fees__c/fields/Fee_From__c.field-meta.xml
<CustomField>
    <fullName>Fee_From__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee From</label>
    <type>Checkbox</type>
</CustomField>