force-app/main/default/objects/Loan_Fees__c/fields/Override_allowed__c.field-meta.xml
<CustomField>
    <fullName>Override_allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override allowed</label>
    <type>Checkbox</type>
</CustomField>