force-app/main/default/objects/Loan_Fees__c/fields/Per_person_twice_for_2_person_apps__c.field-meta.xml
<CustomField>
    <fullName>Per_person_twice_for_2_person_apps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per person (twice for 2-person apps)</label>
    <type>Checkbox</type>
</CustomField>