force-app/main/default/objects/Loan_Fees__c/fields/Product_Loan_Fees__c.field-meta.xml
<CustomField>
    <fullName>Product_Loan_Fees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Loan Fees</label>
    <referenceTo>Loan_Fees__c</referenceTo>
    <relationshipLabel>Loan Fees</relationshipLabel>
    <relationshipName>Loan_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>