force-app/main/default/objects/Loan_Fees__c/recordTypes/Product_Loan_Fees.recordType-meta.xml
<RecordType>
    <fullName>Product_Loan_Fees</fullName>
    <active>true</active>
    <label>Product Loan Fees</label>
</RecordType>