force-app/main/default/objects/Loan_Fees__c/recordTypes/Quote_Loan_Fees.recordType-meta.xml
<RecordType>
    <fullName>Quote_Loan_Fees</fullName>
    <active>true</active>
    <label>Quote Loan Fees</label>
</RecordType>