force-app/main/default/objects/Loan_Fees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Amount__c</columns>
    <columns>Description__c</columns>
    <columns>Fee_From__c</columns>
    <columns>Fee_Type__c</columns>
    <columns>Frequency__c</columns>
    <columns>Notes__c</columns>
    <columns>Override_allowed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>